[package]
name = "matrix"
version = "0.1.0"
authors = ["Yuki Yoshimine <yuki07yuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
crossbeam = "0.6.0"
rand = "0.8.3"

[dependencies.criterion]
version = "0.3.4"
features = ["html_reports"]

[[bench]]
name = "bencher"
harness = false

[[bench]]
name = "criterion"
harness = false
